waiting to edit

--- a/web/app/static/lab04_bootstrap.html
+++ b/web/app/static/lab04_bootstrap.html
@@ -172,8 +172,15 @@
                             <img src="static/img/kuromii.jpg" class="tw-user-small rounded-circle mx-auto d-block">
                           </div>
                           <div class="col-md-9">
-                            <form>
-                              <input id="tweet-input" class="form-control" type="text" placeholder="Whats happening?">
+                            <h3 class= "new-tweet" id="add-tweet">Add new tweet</h3>
+                            <form id="addNewTweet">
+                              
+                              <label for="name">Name</label>
+                              <input type="text" id="name" name="name" placeholder="Your name...">
+                              <label for="message">Message</label>
+                              <input type="textarea" id="message" name="message" placeholder="Type your message...">
+                              <label for="email">Email</label>
+                              <input type="email" id="email" name="email" placeholder="Your email...">
                             </form>
                           </div>
                         </div>
